# ai-03

./: Tema3_RegresiaLogisticaMultinomiala_Numpy.ipynb  Tema4_RegresiaLogisticaMultinomiala_Pytorch.ipynb  Tema5_IA_ID_GavrilaAndreiGabriel.ipynb  main.py  pyproject.toml
.devcontainer/: devcontainer.json
