[tool.poetry]
name = "ai-01"
version = "0.0.1"
description = "AI 01"
authors = ["Andrei Gavrila <andrei.gavrila@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
loguru = "^0.7.2"
numpy = ">=1.22,<2.1"
numba = "^0.60.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
tableprint = "^0.9.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torch-summary = "^1.4.5"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
